Fixed Margin issues on mobile

--- a/csscomponent/cooking.css
+++ b/csscomponent/cooking.css
@@ -398,7 +398,7 @@ footer {
 		margin-right: 4.6em;
 		margin-top: 1.5em;
 	}
-	.findyourchef h3 {
+	.findyourchef > h3 {
 		margin-bottom: .8em;
 	}
 	.becomeachef h3 {
@@ -541,7 +541,7 @@ footer {
 }
 
 .p-home__banner-1 {
-    background-image: url("../Images/vr.jpg");
+    background-image: url("http://www.adasinteriordesign.com/wp-content/uploads/2011/09/Home-cooking-1-490x328.jpg");
 }
 
 .p-home__banner-2 {
@@ -1188,9 +1188,14 @@ span.showbodyofdisplayonhover {
 	}
 
 	.findyourchef > h3 {
-		font-size: 22px;
-
+		font-size: 19px;
+		margin-bottom: 1em;
 	}
+
+	.findyourchef > p {
+		margin-bottom: 1.2em;
+	}
+	
 	.becomeachef {
 		width: 80%;
 		margin-right: auto;
@@ -1202,7 +1207,12 @@ span.showbodyofdisplayonhover {
 	}
 	
 	.becomeachef > h3 {
-		font-size: 22px;
+		font-size: 19px;
+		margin-bottom: 1em;
+	}
+
+	.becomeachef > p {
+		margin-bottom: 1.2em;
 	}
 }
 
